# Chess3D

./: .gitignore  Animator.cpp  Animator.h  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  Camera.cpp  Camera.h  Chess3D.sln  Chess3D.vcxproj  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  Common.h  Doxyfile  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PGNParser.cpp  PGNParser.h  PrimitiveBuilder.cpp  PrimitiveBuilder.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UIManager.cpp  UIManager.h  main_file.cpp
assimp/include/assimp/: revision.h
docs/html/: _animator_8cpp.html  _animator_8cpp_source.html  _animator_8h.html  _animator_8h.js  _animator_8h_source.html  _application_8cpp.html  _application_8cpp_source.html  _application_8h.html  _application_8h.js  _application_8h_source.html  _camera_8cpp.html  _camera_8cpp_source.html  _camera_8h.html  _camera_8h.js  _camera_8h_source.html  _chess_board_8cpp.html  _chess_board_8cpp.js  _chess_board_8cpp_source.html  _chess_board_8h.html  _chess_board_8h.js  _chess_board_8h_source.html  _chess_game_8cpp.html  _chess_game_8cpp_source.html  _chess_game_8h.html  _chess_game_8h.js  _chess_game_8h_source.html  _chess_piece_8cpp.html  _chess_piece_8cpp_source.html  _chess_piece_8h.html  _chess_piece_8h.js  _chess_piece_8h_source.html  _common_8h.html  _common_8h.js  _common_8h_source.html  _light_8h.html  _light_8h.js  _light_8h_source.html  _mesh_8cpp.html  _mesh_8cpp_source.html  _mesh_8h.html  (+129 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+53 more)
include/: Animator.h  Application.h  Camera.h  ChessBoard.h  ChessGame.h  ChessPiece.h  Common.h  Light.h  Mesh.h  Model.h  PGNParser.h  PrimitiveBuilder.h  Renderer.h  Shader.h  Texture.h  UIManager.h
resources/pgn/: opera_game.pgn  sample_game.pgn
shaders/: phong.frag  phong.vert
src/: Animator.cpp  Application.cpp  Camera.cpp  ChessBoard.cpp  ChessGame.cpp  ChessPiece.cpp  Mesh.cpp  Model.cpp  PGNParser.cpp  PrimitiveBuilder.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  UIManager.cpp  main.cpp
